--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ www.ggwp.kr@gmail.com
             }
             else if(adnum == 2)
             {
-                appendMessage("[광고] <a href='https://kbs92.github.io'> 랜덤채팅 바로가기</a>");
+                appendMessage("[광고] <a href='https://blog.ggwp.kr/chat/room-ws.jsp'> 랜덤채팅 바로가기</a>");
             }
 
      		appendMessage("중계서버와 연결되었습니다.");
