--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ www.ggwp.kr@gmail.com
 
         //appendMessage(data);
       }
-      else if (data.indexOf("[주문알림]")) {
+      else if (data.indexOf("주문알림")) {
         playAlertSound(data);
         appendMessage(data);
       }
