--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ www.ggwp.kr@gmail.com
               precision: 0,
               mode: LightweightCharts.PriceScaleMode.Normal,
               autoScale: true,
-              invertScale: true,
+              //invertScale: true,
               alignLabels: false,
               scaleMargins: {
                 top: 0.30,
