--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ herogate92@gmail.com
       <table class="table">
         <thead>
           <tr>
-            <th class="text-primary align-middle" scope="col">101QC(코스피 200선물 12월)</th>
-            <th class="text-primary align-middle" scope="col">106QC(코스닥 150선물 12월)</th>
+            <th class="text-primary align-middle" scope="col">코스피 200선물</th>
+            <th class="text-primary align-middle" scope="col">코스닥 150선물</th>
           </tr>
         </thead>
         <tbody>
