--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ herogate92@gmail.com
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
   <script type="text/javascript">
-    const code_arr = ["101QC", "106QC", "251340", "229200"];
+    const code_arr = ["F101", "F106", "251340", "229200"];
     const codeId_arr = ["F101", "F106", "A251340", "A229200"];
     const orderType_arr = ["매수주문확인", "매수체결확인", "매도주문확인", "매도체결확인"];
     const sound_arr = ["s211.mp3", "s213.mp3", "s111.mp3", "s113.mp3"]
