--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ herogate92@gmail.com
 
 <body class="text-center">
   <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-    <header class="masthead mb-auto">
+    <!-- <header class="masthead mb-auto">
       <div class="inner">
         <h3 class="masthead-brand">232.KR</h3>
         <nav class="nav nav-masthead justify-content-center">
@@ -159,9 +159,9 @@ herogate92@gmail.com
       </div>
     </header>
     <main role="main" class="inner cover">
-      <div class="alert alert-dark" role="alert">서버 문제로 인해 서비스가 원활하지 않습니다.</div>
+      <div class="alert alert-dark" role="alert">자동매매 봇 중계 현황</div>
       <h1 class="cover-heading">자동매매 봇 중계 현황</h1>
-      <p class="lead">통신상 약간의 지연이 있습니다.</p>
+      <h6>(통신상 약간의 지연이 있을 수 있습니다.)</h6>
       <button id="soundAlert" type="button" class="btn btn-dark" onclick="soundAlertBtn()">
         <i id="toggleAlert" class="far fa-bell-slash"></i>소리 알람</button>
       <table class="table">
@@ -179,8 +179,8 @@ herogate92@gmail.com
         </tbody>
         <thead>
           <tr>
-            <th class="text-primary align-middle" scope="col">(229200)KODEX 코스닥 150</th>
-            <th class="text-primary align-middle" scope="col">(251340)KODEX 코스닥150선물인버스</th>
+            <th class="text-primary align-middle" scope="col">(122630)KODEX 레버리지</th>
+            <th class="text-primary align-middle" scope="col">(233740)KODEX 코스닥 150레버리지</th>
           </tr>
         </thead>
         <tr>
@@ -453,8 +453,8 @@ herogate92@gmail.com
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
   <script type="text/javascript">
-    const code_arr = ["F101", "F106", "251340", "229200"];
-    const codeId_arr = ["F101", "F106", "A251340", "A229200"];
+    const code_arr = ["F101", "F106", "122630", "233740"];
+    const codeId_arr = ["F101", "F106", "A122630", "A233740"];
     const orderType_arr = ["매수주문확인", "매수체결확인", "매도주문확인", "매도체결확인"];
     const sound_arr = ["s211.mp3", "s213.mp3", "s111.mp3", "s113.mp3"]
     var soundUrl = "https://232.kr/sound/";
@@ -485,7 +485,7 @@ herogate92@gmail.com
     function setLastBarText(title) {
       toolTip.innerHTML = '<div style="font-size: 12px; margin: 4px 0px; color: #20262E">' + title + '</div>';
     }
-    setLastBarText('KODEX 코스닥150 레버리지');
+    setLastBarText('KODEX레버리지');
 
     connect();
 
@@ -510,9 +510,10 @@ herogate92@gmail.com
         appendMessage("[광고] <a href='https://ggwp.kr'> TwitchTV(트위치티비) 인기 클립 보러가기</a>");
       }
       else if (adnum == 2) {
-        appendMessage("[광고] <a href='https://kbs92.github.io'> 랜덤채팅 바로가기</a>");
+        appendMessage("[광고] <a href='https://blog.ggwp.kr/chat/room-ws.jsp'> 랜덤채팅 바로가기</a>");
       }
       appendMessage("중계서버와 연결되었습니다.");
+      document.getElementsByClassName('alert')[0].innerText="중계서버와 연결되었습니다.";
     }
 
     function onMessage(evt) {
@@ -579,6 +580,7 @@ herogate92@gmail.com
     function onClose(evt) {
       console.log("disconnection");
       appendMessage("연결이 끊어졌습니다.");
+      document.getElementsByClassName('alert')[0].innerText="중계서버와 연결이 종료되었습니다."
     }
 
     function appendMessage(msg) {
