--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ herogate92@gmail.com
         const foundCode = code_arr.findIndex(cd => cd == code);
         const targetEl = document.getElementById(codeId_arr[foundCode]);
 
-        if (code == "233740") {
+        if (code == "122630") {
           //console.log(unixtime);
           if (min_233740 != unixtime) {
             //console.log(unixtime);
@@ -541,7 +541,7 @@ herogate92@gmail.com
           {
           }
           mergeTickToBar(price);
-          return;
+          //return;
         }
         targetEl.classList.toggle("bg-black");
         if (Number(cpprice) > 0) {
