--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ herogate92@gmail.com
   <meta name="author" content="herogate92@gmail.com">
 
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.232.kr">
-  <meta property="og:title" id="ogtitle" content="232kr stock ">
-  <meta property="og:description" id="ogdesc" content="232kr stock ">
-  <title>232kr stock </title>
+  <meta property="og:url" content="https://stock.ggwp.kr">
+  <meta property="og:title" id="ogtitle" content="STOCK_GGWP_KR">
+  <meta property="og:description" id="ogdesc" content="STOCK_GGWP_KR">
+  <title>STOCK GGWP KR </title>
   <!-- Bootstrap core CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -430,7 +430,7 @@ herogate92@gmail.com
     <footer class="mastfoot mt-auto">
       <div class="inner">
         <p class="m-0 text-center text-white">
-          <a class="btn btn-github btn-outline-light" href="https://github.com/herogate92/232.kr"><i
+          <a class="btn btn-github btn-outline-light" href="https://github.com/herogate92/stock.ggwp.kr"><i
               class="fab fa-github fa-1x" aria-hidden="true"></i></a>
         </p>
         <p>herogate92@gmail.com</p>
@@ -451,7 +451,7 @@ herogate92@gmail.com
     const codeId_arr = ["F101", "F106", "A122630", "A233740"];
     const orderType_arr = ["매수주문확인", "매수체결확인", "매도주문확인", "매도체결확인"];
     const sound_arr = ["s211.mp3", "s213.mp3", "s111.mp3", "s113.mp3"]
-    var soundUrl = "https://232.kr/sound/";
+    var soundUrl = "https://stock.ggwp.kr/sound/";
 
     var min_233740 = Number(0);
     var soundState = false;
@@ -485,7 +485,7 @@ herogate92@gmail.com
 
     function connect() {
       wsocket = new WebSocket(
-        "wss://ws.232.kr/ws/liveprice");
+        "wss://ws.ggwp.kr/ws/liveprice");
       wsocket.onopen = onOpen;
       wsocket.onmessage = onMessage;
       wsocket.onclose = onClose;
